--- a/index.html
+++ b/index.html
@@ -211,6 +211,16 @@
 <a href="#home" class="top">
     <img src="images/scroll-top-img.png" alt="">
 </a>
+    <footer>
+    <p><span>Connect </span>with me... </p>
+    <div class="social">
+        <a href="https://instagram.com/parthsalunkhe_" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/parth.salunkhe.75" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/parth-salunkhe-183274224" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://twitter.com/ParthSalunkhe_?t=gQ0llOX6KZAc4DIMue0P5A&s=08" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCZZMxJrqUv3dzbfP-5mz5QQ" target="_blank"><i class="fab fa-youtube"></i></a>
+    </div>
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
